--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,7 +33,7 @@
         tools:ignore="MissingConstraints" />
 
     <EditText
-        android:id="@+id/edit_text_email"
+        android:id="@+id/main_edit_text_email"
         android:layout_margin="20dp"
         android:hint="@string/enter_email"
         android:layout_width="match_parent"
@@ -41,13 +41,13 @@
         app:layout_constraintTop_toBottomOf="@+id/banner_description"/>
 
     <EditText
-        android:id="@+id/edit_text_password"
+        android:id="@+id/main_edit_text_password"
         android:layout_margin="20dp"
         android:hint="@string/enter_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textPassword"
-        app:layout_constraintTop_toBottomOf="@+id/edit_text_email"/>
+        app:layout_constraintTop_toBottomOf="@+id/main_edit_text_email"/>
 
     <Button
         android:id="@+id/button_login"
@@ -60,7 +60,7 @@
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edit_text_password" />
+        app:layout_constraintTop_toBottomOf="@+id/main_edit_text_password" />
 
     <TextView
         android:id="@+id/forgot_password"
@@ -85,5 +85,19 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button_login" />
+
+    <com.google.android.gms.common.SignInButton
+        android:id="@+id/google_button"
+        android:layout_width="135dp"
+        android:layout_height="51dp"
+        android:layout_margin="10dp"
+        android:text="Text"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.511"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.613" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
