-> Nav Options Layout

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,15 +6,46 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_home"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="@string/menu_home" />
+            android:icon="@drawable/ic_menu_breaking"
+            android:title="@string/menu_breaking" />
         <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="@string/menu_gallery" />
+            android:id="@+id/nav_world"
+            android:icon="@drawable/ic_menu_world"
+            android:title="@string/menu_world" />
         <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="@string/menu_slideshow" />
+            android:id="@+id/nav_business"
+            android:icon="@drawable/ic_menu_business"
+            android:title="@string/menu_business" />
+        <item
+            android:id="@+id/nav_tech"
+            android:icon="@drawable/ic_menu_tech"
+            android:title="@string/menu_tech" />
+        <item
+            android:id="@+id/nav_sports"
+            android:icon="@drawable/ic_menu_sports"
+            android:title="@string/menu_sports" />
+        <item
+            android:id="@+id/nav_science"
+            android:icon="@drawable/ic_menu_science"
+            android:title="@string/menu_science" />
+        <item
+            android:id="@+id/nav_health"
+            android:icon="@drawable/ic_menu_health"
+            android:title="@string/menu_health" />
     </group>
+
+    <item android:title="User Preferences">
+        <menu>
+            <item
+                android:id="@+id/nav_profile"
+                android:icon="@drawable/ic_menu_profile"
+                android:title="@string/menu_profile" />
+            <item
+                android:id="@+id/nav_settings"
+                android:icon="@drawable/ic_menu_settings"
+                android:title="@string/menu_settings" />
+        </menu>
+    </item>
+
+
 </menu>
