--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -8,18 +8,18 @@
     <fragment
         android:id="@+id/nav_home"
         android:name="com.example.newsapplication.ui.home.HomeFragment"
-        android:label="@string/menu_home"
+        android:label="@string/menu_breaking"
         tools:layout="@layout/fragment_home" />
 
     <fragment
-        android:id="@+id/nav_gallery"
-        android:name="com.example.newsapplication.ui.gallery.GalleryFragment"
-        android:label="@string/menu_gallery"
-        tools:layout="@layout/fragment_gallery" />
+        android:id="@+id/nav_world"
+        android:name="com.example.newsapplication.ui.world.WorldFragment"
+        android:label="@string/menu_world"
+        tools:layout="@layout/fragment_world" />
 
     <fragment
-        android:id="@+id/nav_slideshow"
+        android:id="@+id/nav_business"
         android:name="com.example.newsapplication.ui.slideshow.SlideshowFragment"
-        android:label="@string/menu_slideshow"
+        android:label="@string/menu_business"
         tools:layout="@layout/fragment_slideshow" />
 </navigation>
