--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -8,7 +8,7 @@
     <fragment
         android:id="@+id/nav_home"
         android:name="com.example.newsapplication.ui.home.HomeFragment"
-        android:label="@string/menu_breaking"
+        android:label="@string/menu_home"
         tools:layout="@layout/fragment_home" />
 
     <fragment
@@ -21,5 +21,10 @@
         android:id="@+id/nav_business"
         android:name="com.example.newsapplication.ui.slideshow.SlideshowFragment"
         android:label="@string/menu_business"
-        tools:layout="@layout/fragment_slideshow" />
+        tools:layout="@layout/fragment_breaking" />
+    <fragment
+        android:id="@+id/nav_breaking"
+        android:name="com.example.newsapplication.ui.slideshow.SlideshowFragment"
+        android:label="@string/menu_breaking"
+        tools:layout="@layout/fragment_breaking" />
 </navigation>
