-> Fragments and ViewModels

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -19,12 +19,38 @@
 
     <fragment
         android:id="@+id/nav_business"
-        android:name="com.example.newsapplication.ui.slideshow.SlideshowFragment"
+        android:name="com.example.newsapplication.ui.business.BusinessFragment"
         android:label="@string/menu_business"
-        tools:layout="@layout/fragment_breaking" />
+        tools:layout="@layout/fragment_business" />
     <fragment
         android:id="@+id/nav_breaking"
-        android:name="com.example.newsapplication.ui.slideshow.SlideshowFragment"
+        android:name="com.example.newsapplication.ui.breaking.BreakingFragment"
         android:label="@string/menu_breaking"
         tools:layout="@layout/fragment_breaking" />
+
+    <fragment
+        android:id="@+id/nav_tech"
+        android:name="com.example.newsapplication.ui.tech.TechFragment"
+        android:label="@string/menu_tech"
+        tools:layout="@layout/fragment_tech" />
+
+    <fragment
+        android:id="@+id/nav_sports"
+        android:name="com.example.newsapplication.ui.sports.SportsFragment"
+        android:label="@string/menu_sports"
+        tools:layout="@layout/fragment_sports" />
+
+    <fragment
+        android:id="@+id/nav_science"
+        android:name="com.example.newsapplication.ui.science.ScienceFragment"
+        android:label="@string/menu_science"
+        tools:layout="@layout/fragment_science" />
+
+    <fragment
+        android:id="@+id/nav_health"
+        android:name="com.example.newsapplication.ui.health.HealthFragment"
+        android:label="@string/menu_health"
+        tools:layout="@layout/fragment_health" />
+
+
 </navigation>
