--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -12,6 +12,12 @@
             android:id="@+id/nav_breaking"
             android:icon="@drawable/ic_menu_breaking"
             android:title="@string/menu_breaking" />
+
+        <item
+            android:id="@+id/nav_fav"
+            android:icon="@drawable/ic_menu_fav"
+            android:title="@string/menu_fav" />
+
         <item
             android:id="@+id/nav_world"
             android:icon="@drawable/ic_menu_world"
