--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -52,5 +52,11 @@
         android:label="@string/menu_health"
         tools:layout="@layout/fragment_health" />
 
+    <fragment
+        android:id="@+id/nav_fav"
+        android:name="com.example.newsapplication.ui.fav.FavFragment"
+        android:label="@string/menu_fav"
+        tools:layout="@layout/fragment_fav" />
+
 
 </navigation>
