-> RecyclerView Prototype Layout -> Adapter & Recycler Adjusted -> Endpoints edited

--- a/app/src/main/res/layout/news_recylerline.xml
+++ b/app/src/main/res/layout/news_recylerline.xml
@@ -1,44 +1,93 @@
-<?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/layout_margin_5"
+        android:clickable="true"
+        android:focusable="true"
+        android:foreground="?android:attr/selectableItemBackground"
+        card_view:cardCornerRadius="@dimen/card_corner_radius">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="?selectableItemBackground"
-            android:padding="5dp">
+            android:layout_marginBottom="@dimen/layout_margin"
+            android:orientation="vertical">
 
-                <androidx.appcompat.widget.AppCompatImageView
+            <TextView
+                android:id="@+id/news_title"
+                style="@style/TitleTextViewStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:textAppearanceLarge"
+                android:textStyle="bold"
+                tools:text="title" />
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/layout_margin_8"
+                android:layout_marginTop="@dimen/layout_margin_4">
+
+                <TextView
+                    android:id="@+id/section_card"
+                    style="@style/SectionTextViewStyle"
+                    android:layout_alignParentStart="true"
+                    android:layout_toStartOf="@id/news_image"
+                    tools:text="section"
+                    android:layout_alignParentLeft="true"
+                    android:layout_toLeftOf="@id/news_image" />
+
+                <TextView
+                    android:id="@+id/trail_text_card"
+                    style="@style/TrailTextViewStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_below="@+id/section_card"
+                    android:layout_toStartOf="@+id/news_image"
+                    tools:text="trailText"
+                    android:layout_alignParentLeft="true"
+                    android:layout_toLeftOf="@+id/news_image" />
+
+                <ImageView
                     android:id="@+id/news_image"
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    app:layout_constraintDimensionRatio="16:9"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    tools:src="@drawable/bg_image_round"
-                    tools:ignore="MissingConstraints" />
+                    android:layout_width="@dimen/thumbnail_image_width"
+                    android:layout_height="@dimen/thumbnail_image_height"
+                    android:layout_alignParentEnd="true"
+                    android:contentDescription="@string/image_des"
+                    android:scaleType="centerCrop"
+                    android:layout_alignParentRight="true" />
+            </RelativeLayout>
 
-                <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/news_source"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/news_image"
-                    tools:text="Crypto Coins News" />
+            <TextView
+                android:id="@+id/news_source"
+                style="@style/AuthorTextViewStyle"
+                tools:text="author" />
 
-                <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/news_title"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/black"
-                    android:textSize="18sp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/news_source"
-                    tools:text="Facebook’s Cryptocurrency Will Pay Interest to Users, Predicts Blockchain Regulator" />
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/date_card"
+                    style="@style/DateTextViewStyle"
+                    android:layout_alignParentStart="true"
+                    tools:text="date"
+                    android:layout_alignParentLeft="true" />
 
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
-</layout>
+            </RelativeLayout>
+
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
+
+</RelativeLayout>
