--- a/app/src/main/res/layout/news_recylerline.xml
+++ b/app/src/main/res/layout/news_recylerline.xml
@@ -46,7 +46,7 @@
                     android:layout_toLeftOf="@id/news_image" />
 
                 <TextView
-                    android:id="@+id/trail_text_card"
+                    android:id="@+id/news_description"
                     style="@style/TrailTextViewStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -77,7 +77,7 @@
                 android:layout_height="wrap_content">
 
                 <TextView
-                    android:id="@+id/date_card"
+                    android:id="@+id/news_date"
                     style="@style/DateTextViewStyle"
                     android:layout_alignParentStart="true"
                     tools:text="date"
