--- a/app/src/main/res/layout/fragment_science.xml
+++ b/app/src/main/res/layout/fragment_science.xml
@@ -6,18 +6,16 @@
     android:layout_height="match_parent"
     tools:context=".ui.science.ScienceFragment">
 
-    <TextView
-        android:id="@+id/text_science"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/science_recyclerview"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:padding="7dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:gravity="center_horizontal" />
+        tools:listitem="@layout/news_recylerline" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
