-> Finished RecyclerView (Missing OnClickListener) -> Profile Layout started

--- a/app/src/main/res/layout/fragment_entertainment.xml
+++ b/app/src/main/res/layout/fragment_entertainment.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.tech.ProfileFragment">
+    tools:context=".ui.entertainment.EntertainmentFragment">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/tech_recyclerview"
+        android:id="@+id/entertainment_recyclerview"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:padding="7dp"
