--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -30,9 +30,15 @@
 
     <fragment
         android:id="@+id/nav_tech"
-        android:name="com.example.newsapplication.ui.tech.ProfileFragment"
+        android:name="com.example.newsapplication.ui.tech.TechFragment"
         android:label="@string/menu_tech"
         tools:layout="@layout/fragment_tech" />
+
+    <fragment
+        android:id="@+id/nav_profile"
+        android:name="com.example.newsapplication.ui.profile.ProfileFragment"
+        android:label="@string/menu_profile"
+        tools:layout="@layout/fragment_profile" />
 
     <fragment
         android:id="@+id/nav_sports"
